--- a/public/front/css/common.css
+++ b/public/front/css/common.css
@@ -11,6 +11,7 @@ html,body{
   min-width: 320px;
   margin: 0 auto;
   position: relative;
+  background-color: #fff;
 }
 .lt_header{
   height: 45px;
@@ -50,7 +51,7 @@ html,body{
 .lt_main{
   width: 100%;
   height: 100%;
-  background-color: pink;
+  position: relative;
 }
 .lt_footer{
   width: 100%;
