--- a/public/front/css/common.css
+++ b/public/front/css/common.css
@@ -2,6 +2,15 @@ html,body{
   width: 100%;
   height: 100%;
 }
+ul,li{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+img{
+  display: block;
+  width: 100%;
+}
 .lt_container{
   width: 100%;
   height: 100%;
@@ -53,6 +62,58 @@ html,body{
   height: 100%;
   position: relative;
 }
+
+/* 公用的搜索框部分 */
+.lt_search{
+  padding: 10px;
+  position: relative;
+}
+.lt_search .search_input{
+  border: 1px solid  #007AFF;
+  font-size: 12px;
+  border-radius: 5px;
+  height: 34px;
+  margin: 0;
+}
+.lt_search .search_btn{
+  border-radius: 0 5px 5px 0;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+
+/* 公用的产品模块 */
+.lt_main .lt_product{
+  padding: 10px;
+}
+.lt_main .lt_product li{
+  width: 48%;
+  padding: 10px;
+  float: left;
+  text-align: center;
+  border: 1px solid #ccc;
+  margin-bottom: 10px;
+}
+.lt_main .lt_product li:nth-child(2n+1){
+  margin-right: 4%;
+}
+.lt_main .lt_product li img{
+  display: block;
+  width: 150px;
+  height: 150px;
+  margin: 0 auto;
+}
+.lt_main .lt_product li .price{
+  color: red;
+}
+.lt_main .lt_product li .old-price{
+  text-decoration: line-through;
+}
+
+
+
+
 .lt_footer{
   width: 100%;
   height: 55px;
